# rodent-care

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Cargo.toml  README.md  script.js
backend/activity-tracking-service/: .env  Cargo.toml  Dockerfile
backend/activity-tracking-service/src/: config.rs  db.rs  error.rs  events.rs  handlers.rs  main.rs  messaging.rs  middleware.rs  models.rs  routes.rs
backend/analytics-service/: Cargo.toml  Dockerfile
backend/analytics-service/src/: config.rs  db.rs  error.rs  events.rs  handlers.rs  main.rs  messaging.rs  models.rs  routes.rs
backend/api-gateway/: .env  .env.example  Cargo.toml  Dockerfile
backend/api-gateway/src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs  proxy.rs  rate_limiter.rs
backend/rodent-registry-service/: .env  Cargo.toml  Dockerfile
backend/rodent-registry-service/src/: config.rs  db.rs  error.rs  events.rs  handlers.rs  main.rs  messaging.rs  middleware.rs  models.rs  routes.rs
backend/user-service/: .env  .env.example  Cargo.toml  Dockerfile
backend/user-service/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs
frontend/rodent-care/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/rodent-care/src/: index.html  styles.css
frontend/rodent-care/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/rodent-care/src/app/components/dashboard/: dashboard.html  dashboard.ts
frontend/rodent-care/src/app/components/layout/: layout.html  layout.ts
frontend/rodent-care/src/app/components/profile/: profile.html  profile.ts
frontend/rodent-care/src/app/dto/activity/: ActivityResponse.ts  ActivityType.ts  CreateActivityRequest.ts  CreateDailyRecordRequest.ts  CreateFeedingRecordRequest.ts  DailyRecordResponse.ts  DailySummaryResponse.ts  FeedingRecordResponse.ts  FoodType.ts  QueryParams.ts  UpdateDailyRecordRequest.ts  UpdateFeedingRecordRequest.ts  index.ts
frontend/rodent-care/src/app/dto/analytics/: ActivityAnalyticsResponse.ts  DashboardSummaryResponse.ts  FeedingAnalyticsResponse.ts  HealthAnalyticsResponse.ts  PopulationStatsResponse.ts  TrendDataResponse.ts  index.ts
frontend/rodent-care/src/app/dto/auth/: ActivityLog.ts  RefreshTokenDTO.ts  RegisterRequestDTO.ts  RegisterResponseDTO.ts  TokensDTO.ts  UpdateProfileRequest.ts  UpdateUserRoleRequest.ts  (+5 more)
(+47 files in other folders)
